--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="css/modules.css" rel="stylesheet">
 </head>
 <body>
-  <ol>
+  <ol class="list-group">
     <li>
       <ul class="list-group-inline">
         <li><strong>Owls</strong></li>
